tests/NormalTests/paczka1/fuzzy1/50240239.err
Error in line 1: DQkE A392 75,0
Error in line 6: 225zkEy2NSO A392 29,06
Error in line 4: S406 S406 42,6
Error in line 12: 225zkEy2NSO A392 34,6
Error in line 20: CTzo S911 90,5
Error in line 14: 225zkEy2NSO S793 34,9
Error in line 25: oqiYf6KgP S406 7,2
Error in line 27: 1vhZu S406 34,8
Error in line 24: S406 S793 54,1
